--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,8 @@ h1 {
 }
 
 .progress-bar {
-    width: 100px;
+    width: 90%;
+    margin-inline: auto;
     height: 8px;
     background-color: var(--progress-bg);
     border-radius: 4px;
