--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
     --hover-color: rgba(154, 31, 46, 0.1);
     --filter-active: #d32f2f;
     --error-notification: #f44336;
+    --dropdown-width: 180px;
 }
 
 [data-theme="dark"] {
@@ -22,6 +23,7 @@
     --hover-color: rgba(201, 50, 67, 0.2);
     --filter-active: #f44336;
     --error-notification: #f44336;
+    --dropdown-width: 180px;
 }
 
 * {
@@ -54,16 +56,124 @@ h1 {
     margin: 0;
 }
 
+details.menu,
 .theme-toggle {
     position: absolute;
     top: 0;
-    right: 0;
     background: none;
     border: none;
     cursor: pointer;
     font-size: 1.5rem;
     color: var(--text-color);
+}
+
+.theme-toggle{
+    right: 0;
     padding: 5px;
+}
+
+/* Dropdown styles */
+details.menu {
+    left: 0;
+    padding: 0;
+    margin: auto;
+    margin-inline: 10px;
+}
+
+details.menu summary {
+    list-style: none;
+    list-style-type: none;
+}
+
+details.menu summary::-webkit-details-marker {
+    display: none;
+}
+
+details.menu ul {
+    position: absolute;
+    margin: 15px 0 0 0;
+    padding: 2px 0;
+    width: var(--dropdown-width);
+    left: 205%;
+    margin-left: calc((var(--dropdown-width) / 2)  * -1);
+    box-sizing: border-box;
+    z-index: 2;
+    background: var(--card-bg);
+    border-radius: 9px;
+    list-style: none;
+    font-size: 14px;
+    font-weight: bolder;
+    border: 1px solid var(--border-color);
+}
+
+details.menu ul li {
+    padding: 0;
+    margin: 0;
+}
+
+details.menu ul li hr.link-separator{
+    border: var(--accent-color) 1px solid;
+    margin-inline: 10px;
+    margin-block: 5px;
+}
+
+details.menu ul li a:link, 
+details.menu ul li a:visited {
+    display: inline-block;
+    padding-block: .25em;
+    width: 100%;
+    box-sizing: border-box;
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+details.menu ul li a:hover {
+    background-color: var(--hover-color);
+    max-width: 90%;
+}
+
+/* cerrar el menu con click por fuera */
+details.menu > summary::before {
+    display: none;
+}
+
+details.menu[open] > summary::before {
+    content: ' ';
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+}
+
+details.menu:not([open]) .close-icon,
+details.menu[open] .open-icon {
+    display: none;
+}
+
+details.menu:not([open]) .open-icon,
+details.menu[open] .close-icon {
+    display: block; 
+}
+
+details.menu a.button {
+    /* Frame */
+    display: inline-block;
+    border-radius: 7px;
+    width: 36px;
+    padding: 8px;
+    box-sizing: border-box;
+    /* Style */
+    border: none;
+    font-size: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+details.menu a.button:active {
+    filter: brightness(75%);
 }
 
 .controls {
@@ -97,25 +207,6 @@ h1 {
 }
 
 .filter-btn:hover {
-    background-color: var(--hover-color);
-}
-
-.import-export {
-    display: flex;
-    gap: 10px;
-}
-
-.io-btn {
-    padding: 8px 15px;
-    background-color: var(--card-bg);
-    border: 1px solid var(--border-color);
-    border-radius: 20px;
-    cursor: pointer;
-    color: var(--text-color);
-    transition: all 0.3s;
-}
-
-.io-btn:hover {
     background-color: var(--hover-color);
 }
 
