--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,6 +324,7 @@ details.menu ul {
     text-align: right;
 }
 
+/* Estilos de la barra de progreso */
 .progress-bar {
     width: 90%;
     margin-inline: auto;
@@ -332,30 +333,34 @@ details.menu ul {
     border-radius: 4px;
     border: none;
 
+    /* Contenedor (fondo) */
+    &::-webkit-progress-bar {
+        background-color: var(--progress-bg);
+        border-radius: 4px;
+    }
+
+    /* Barra de progreso (Webkit) */
+    &::-webkit-progress-value {
+        background-color: var(--completed-color);
+        border-radius: 4px;
+        transition: all 0.3s ease;
+    }
+
+    /* Barra de progreso (Firefox) */
+    &::-moz-progress-bar {
+        background-color: var(--completed-color);
+        border-radius: 4px;
+        transition: all 0.3s ease;
+    }
+
+    /* Fallback para otros navegadores */
+    &[value] {
+        color: var(--completed-color);
+    }
+
     @media (max-width: 768px) {
         width: 50%;
     }    
-}
-
-.progress-bar::-webkit-progress-bar {
-    background-color: var(--progress-bg);
-    border-radius: 4px;
-}
-
-.progress-bar::-webkit-progress-value {
-    background-color: var(--completed-color);
-    border-radius: 4px;
-    transition: all 0.3s ease;
-}
-
-.progress-bar::-moz-progress-bar {
-    background-color: var(--completed-color);
-    border-radius: 4px;
-    transition: all 0.3s ease;
-}
-
-.progress-bar[value] {
-    color: var(--completed-color);
 }
 
 .season-item {
