--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,10 +366,10 @@ details.menu ul {
 .season-item {
     padding: 10px 15px;
     border-bottom: 1px solid var(--border-color);
-}
-
-.season-item:last-child {
-    border-bottom: none;
+    
+    &:last-child {
+        border-bottom: none;
+    }
 }
 
 dialog section article summary,
