--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,21 +436,24 @@ dialog section article details[open] summary::after,
     padding: 10px 15px 10px 30px;
 }
 
+/* Estilos del contenedor de episodios */
 .check-item {
     margin-bottom: 8px;
     display: flex;
     align-items: flex-start;
-}
 
-.check-item input[type="checkbox"] {
-    margin-right: 10px;
-    margin-top: 3px;
-    accent-color: var(--accent-color);
-}
+    /* Estilos del checkbox */
+    & input[type="checkbox"] {
+        margin-right: 10px;
+        margin-top: 7px;
+        accent-color: var(--accent-color);
+    }
 
-.check-item label {
-    flex: 1;
-    cursor: pointer;
+    /* Estilos del label (datos del episodio) */
+    & label {
+        flex: 1;
+        cursor: pointer;
+    }
 }
 
 .episode-list {
