--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -530,10 +530,10 @@ dialog section article details[open] summary::after,
     transform: translateX(100%);
     transition: transform 0.3s ease;
     z-index: 1000;
-}
 
-.notification.show {
-    transform: translateX(0);
+    &.show {
+        transform: translateX(0);
+    }
 }
 
 p.empty-list {
