--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,5 @@
 
 @import url("./base.css");
 @import url("./components/header.css");
+@import url("./components/controls.css");
 @import url("./styleOld.css");
