--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,4 +4,5 @@
 @import url("./components/header.css");
 @import url("./components/controls.css");
 @import url("./components/saga_component.css");
+@import url("./components/progress_bar.css");
 @import url("./styleOld.css");
