Agregado componente con estilos de la de la contenedor de temporadas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,4 +5,5 @@
 @import url("./components/controls.css");
 @import url("./components/saga_component.css");
 @import url("./components/progress_bar.css");
+@import url("./components/season_component.css");
 @import url("./styleOld.css");
