--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,4 +6,5 @@
 @import url("./components/saga_component.css");
 @import url("./components/progress_bar.css");
 @import url("./components/season_component.css");
+@import url("./components/episode_component.css");
 @import url("./styleOld.css");
