--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,4 +7,5 @@
 @import url("./components/progress_bar.css");
 @import url("./components/season_component.css");
 @import url("./components/episode_component.css");
+@import url("./components/footer.css");
 @import url("./styleOld.css");
