Agregado componente con estilos del  sistema de notificaciones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,4 +8,5 @@
 @import url("./components/season_component.css");
 @import url("./components/episode_component.css");
 @import url("./components/footer.css");
+@import url("./components/notification.css");
 @import url("./styleOld.css");
