--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,4 +9,4 @@
 @import url("./components/episode_component.css");
 @import url("./components/footer.css");
 @import url("./components/notification.css");
-@import url("./styleOld.css");
+@import url("./components/modal.css");
